Make sure the selectionChanged signal is not called too much

It could happen that it was called with empty selectionrange
Now we check to see if the selection ranges are empty

Task-number: QTBUG-9507
Reviewed-by: gabi